update html et css

--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ input , select, textarea{
     margin-top: 4%;
     margin-bottom: 4%;
     background-color: blue;
+    color: white;
 
 }
 .lien{
